feat: forms update

--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@
       <script type="text/javascript" id="scr_63e193393a0b38000a4740c8">var s=document.createElement("script");s.src="https://scripts.converteai.net/1870bacf-099b-4002-b1bf-4ca60419f9b3/players/63e193393a0b38000a4740c8/player.js",s.async=!0,document.head.appendChild(s);
       </script>
       <p>PREENCHA OS CAMPOS ABAIXO PARA SE INSCREVER</p>
-    <form
-      id="informationForm" 
-    >
+    <form action="https://api.sheetmonkey.io/form/rJTWMp73Czs2qy6dJtheaf" method="post">
       <input name="Nome" id="name" type="text" placeholder="Nome Completo" required>
       <input name="Whatsapp" id="number" type="number" placeholder="Whatsapp" required>
-      <button type="submit">ENVIAR</button>
+      <input type="hidden" name="Created" value="x-sheetmonkey-current-date-time" />
+      <button type="submit" value="Submit">ENVIAR</button>
     </form>
       
     </section>
@@ -185,7 +184,6 @@
     </div>
   </section>
 
-  <script src="./scripts.js"></script>
 </body>
 
 </html>
