feature: changed form

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
       <script type="text/javascript" id="scr_63e193393a0b38000a4740c8">var s=document.createElement("script");s.src="https://scripts.converteai.net/1870bacf-099b-4002-b1bf-4ca60419f9b3/players/63e193393a0b38000a4740c8/player.js",s.async=!0,document.head.appendChild(s);
       </script>
       <p>PREENCHA OS CAMPOS ABAIXO PARA SE INSCREVER</p>
-    <form
-      id="informationForm" 
-    >
-      <input name="Nome" id="name" type="text" placeholder="Nome Completo" required>
-      <input name="Whatsapp" id="number" type="number" placeholder="Whatsapp" required>
-      <button type="submit">ENVIAR</button>
-    </form>
+   
+      <form action="https://api.sheetmonkey.io/form/rJTWMp73Czs2qy6dJtheaf" method="post">
+        <input name="Nome" id="name" type="text" placeholder="Nome Completo" required>
+        <input name="Whatsapp" id="number" type="tel" maxlength="15" onkeyup="handlePhone(event)" placeholder="Whatsapp (somente números)" required>
+        <input type="hidden" name="Created" value="x-sheetmonkey-current-date-time" />
+        <button type="submit" value="Submit">ENVIAR</button>
+      </form>
       
     </section>
 
@@ -60,7 +60,7 @@
           <p>Dia 11/02/2023, sábado - às 9h da manhã</p>
         </li>
         <li><span class="questions">ONDE VAI SER?</span>
-           <p>No Parque São José dos Pinhas
+           <p>No Parque São José dos Pinhais <br/>
             Av. das Torres, 100 - Cidade Jardim, São José dos Pinhais - PR, 83005-450</p> 
         <a href="https://www.google.com/maps/place/Parque+S%C3%A3o+Jos%C3%A9/@-25.5117113,-49.2114316,15z/data=!4m13!1m7!3m6!1s0x0:0x3c54ba2b46ec1569!2sParque+de+S%C3%A3o+Jos%C3%A9+dos+Pinhais+-+Av.+Com.+Franco+-+Cidade+Jardim,+S%C3%A3o+Jos%C3%A9+dos+Pinhais+-+PR,+80050-540!3b1!8m2!3d-25.5117888!4d-49.2049836!3m4!1s0x94dcfb31c7762299:0xa23dd2b07de86fda!8m2!3d-25.5157806!4d-49.2073506">
           <img src="./images/parque.webp" alt="" class="local">
@@ -113,7 +113,7 @@
         </div>
         <div class="opinionVideo">
           <iframe width='500' height='294'
-            src=""
+            src="https://www.youtube.com/embed/ITHOmbR0cnM"
             frameborder="0"></iframe>
         </div>
         <div class="opinionVideo">
@@ -134,9 +134,9 @@
           <p>Qualquer dúvida ou sugestão <br/>
             é só entrar em contato com a gente clicando <br/>nos botões abaixo</p>
           <div class="iconContact">
-            <a href=""><img src="./images/whatsapp.webp" alt=""></a>
-            <a href="coldkillersfa@gmail.com"><img src="./images/envelope.webp" alt=""></a>
-            <a href=""><img src="./images/instagram.webp" alt=""></a>
+            <a href="https://wa.me/5541995990801?text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20o%20try%20out."><img src="./images/whatsapp.webp" alt=""></a>
+            <a href="mailto:coldkillersfa@gmail.com"><img src="./images/envelope.webp" alt=""></a>
+            <a href="https://www.instagram.com/coldkillersfa/"><img src="./images/instagram.webp" alt=""></a>
           </div>
         </div>
         <a href="https://www.instagram.com/coldkillersfa/">
@@ -185,7 +185,7 @@
     </div>
   </section>
 
-  <script src="./scripts.js"></script>
+  <script src="scripts.js"></script>
 </body>
 
 </html>
