--- a/obrigado.html
+++ b/obrigado.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="video">
-    <video controls preload="none" src="./Obrigado.mp4">
+    <video controls preload="metadata" src="./Obrigado.mp4">
       
     </video>
   </div>
