feat: added timer and new image

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
   <section class="header">
     <img src="./images/CK_Identidade.webp" alt="">
     <h1>
-      AVISO: 29% DAS VAGAS JÁ PREENCHIDAS, GARANTA A SUA!
+      AVISO: É AMANHÃ, ÚLTIMAS VAGAS!
+      <div id="countdouwn">TEMPO RESTANTE - 00:00:00
+      </div>
     </h1>
   </section>
-
+  
   <div class="body">
     <section class="introduction">
       
@@ -143,31 +145,31 @@
             <p class="instagram">Siga-nos no instagram </p> 
           <div class="gallery">
             <figure class="galleryitem">
-              <img src="./images/insta1.webp" class="gallery__img" alt="Image 1">
+              <img src="./images/tryout_sabado.jpeg" class="gallery__img" loading="lazy" alt="">
             </figure>
             <figure class="galleryitem galleryItem2">
-              <img src="./images/insta2.webp" class="gallery__img" alt="Image 1">
+              <img src="./images/insta2.webp" class="gallery__img" loading="lazy" alt="">
             </figure>
             <figure class="galleryitem">
-              <img src="./images/insta3.webp" class="gallery__img" alt="Image 1">
+              <img src="./images/insta3.webp" class="gallery__img" loading="lazy" alt="">
             </figure>
             <figure class="galleryitem">
-              <img src="./images/insta4.webp" class="gallery__img" alt="Image 1">
+              <img src="./images/insta4.webp" class="gallery__img" loading="lazy" alt="">
             </figure>
             <figure class="mobileHiden">
-              <img src="./images/insta5.webp" class="gallery__img" alt="Image 1">
+              <img src="./images/insta5.webp" class="gallery__img" loading="lazy" alt="">
             </figure>
             <figure class="mobileHiden">
-              <img src="./images/insta6.webp" class="gallery__img" alt="Image 1">
+              <img src="./images/insta6.webp" class="gallery__img" loading="lazy" alt="">
             </figure>
             <figure class="mobileHiden">
-              <img src="./images/insta7.webp" class="gallery__img" alt="Image 1">
+              <img src="./images/insta7.webp" class="gallery__img" loading="lazy" alt="">
             </figure>
             <figure class="mobileHiden">
-              <img src="./images/insta8.webp" class="gallery__img" alt="Image 1">
+              <img src="./images/insta8.webp" class="gallery__img" loading="lazy" alt="">
             </figure>
             <figure  class="mobileHiden">
-              <img src="./images/insta9.webp" class="gallery__img" alt="Image 1">
+              <img src="./images/insta9.webp" class="gallery__img" loading="lazy" alt="">
             </figure> 
             
           </div>
