feat: updated map

--- a/index.html
+++ b/index.html
@@ -62,11 +62,9 @@
           <p>Dia 11/02/2023, sábado - às 9h da manhã</p>
         </li>
         <li><span class="questions">ONDE VAI SER?</span>
-           <p>No Parque São José dos Pinhais <br/>
-            Av. das Torres, 100 - Cidade Jardim, São José dos Pinhais - PR, 83005-450</p> 
-        <a href="https://www.google.com/maps/place/Parque+S%C3%A3o+Jos%C3%A9/@-25.5117113,-49.2114316,15z/data=!4m13!1m7!3m6!1s0x0:0x3c54ba2b46ec1569!2sParque+de+S%C3%A3o+Jos%C3%A9+dos+Pinhais+-+Av.+Com.+Franco+-+Cidade+Jardim,+S%C3%A3o+Jos%C3%A9+dos+Pinhais+-+PR,+80050-540!3b1!8m2!3d-25.5117888!4d-49.2049836!3m4!1s0x94dcfb31c7762299:0xa23dd2b07de86fda!8m2!3d-25.5157806!4d-49.2073506">
-          <img src="./images/parque.webp" alt="" class="local">
-        </a>
+          <iframe id="map-canvas" width="520" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=520&amp;height=400&amp;hl=en&amp;q=Esso%20Bola%20-%20Rua%20Augusto%20Zibarth,%20300%20Curitiba+(Esso%20Bola)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+          <p>Quadra coberta Esso Bola <br/>
+            Rua Augusto Zibarth, 300 - Uberaba, Curitiba - PR</p> 
         </li>
         <li><span class="questions">QUAL O VALOR DA INSCRIÇÃO?</span><p>O valor da inscrição para a seletiva é de apenas R$10,00 por atleta.</p></li>
         <li><span class="questions">O QUE LEVAR?</span>
